src/test/deca/context/invalid/ContextAvecObjet/Cast/floatCastFloat.deca
//Description
//  Cast d'un float en float
//
//Réponse
//  Erreur contextuelle ligne 9
//  un float ne peut pas être casts
{
    float a = 1;
    float x = (float)(a);
}